# damath-zero

./: .clang-format  .gitignore  CMakeLists.txt  damath-zero.proto  mojoproject.toml
app/: package-lock.json
app/app/: layout.tsx  page.tsx
app/app/connect2/: page.tsx
app/app/connect2/[id]/: page.tsx
app/app/damath/: board.ts  page.tsx
app/app/tictactoe/: actions.ts  new-game.tsx  page.tsx  rpc.ts
app/app/tictactoe/[id]/: board.tsx  page.tsx
app/components/: board.tsx  new-game.tsx
app/components/connect2/: board.tsx
app/components/tictactoe/: board.tsx
app/lib/: rpc.ts
cmake/: fmt.cmake  glaze.cmake  grpc.cmake  gtest.cmake  httplib.cmake  ixwebsocket.cmake  torch.cmake
damath-zero/app/: app.js  index.html  package.json  vite.config.ts
damath-zero/base/: id.h  macros.h  storage.h  types.h
damath-zero/core/: actor.h  board.h  config.h  context.h  game.h  mcts.cpp  mcts.h  network.h  node.cpp  node.h  trainer.h
damath-zero/games/connect2/: board.cpp  board.h  network.h  train.cpp
damath-zero/games/tictactoe/: board.cpp  board.h  game.cpp  game.h  network.h  tictactoe.cpp  tictactoe.h  train.cpp
damath-zero/server/: game_server.h  main.cpp  rpc.h  tictactoe.cpp  tictactoe.h
damath-zero/server/connect2/: main.cpp  server.h
damath-zero/server/tictactoe/: main.cpp  server.h
src/: game.mojo  index.mojo  main.mojo  mcts.mojo  network.mojo  node.mojo  server.mojo  storage.mojo
src/app/: index.html
src/core/: node.mojo  storage.mojo
src/server/: main.mojo
static/: index.html
tests/: test_base.cpp  test_mcts.cpp
